@@ -49,7 +49,9 @@ Core
   than %s in the text or std_label attributes.
 
 * Vend::SQL_Parser required LIMIT clause to be lowercase when it should be
-  case-insensitive 
+  case-insensitive.
+
+* Issue error message if subroutine for PREFIX-exec is missing.
 
 * Fix [on-match]/[no-match] for loop lists without matchlimit generated from
   embedded Perl objects
